added basic styling

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     <h1 id="logo">Robert Ruelas</h1>
     <!-- Navigation bar -->
     <div class="topnav">
-        <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>   
+        <a class="#active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>   
         <a href="#about"><i class="fa fa-fw fa-book"></i> About</a>
+        <a href="#skills"><i class="fa fa-fw fa-pencil-square-o"></i> Skills</a>
+        <a href="#experience"><i class="fa fa-fw fa-pencil-square-o"></i> Experience</a>
         <a href="#portfolio"><i class="fa fa-fw fa-suitcase"></i> Portfolio</a>
         <a href="#contact"><i class="fa fa-fw fa-vcard"></i> Contact</a>
       </div>
@@ -33,50 +35,163 @@
 <body style="background-color:black;">
 <!--Images section-->
   <div class="scroll-container">
-  <img src="assets/images/self_1.jpeg" alt="Pensive" width="600" height="400">
   <img src="assets/images/self_2.jpg" alt="Studio" width="600" height="400">
   <img src="assets/images/self_3.jpg" alt="Effiel Tower" width="600" height="400">
   <img src="assets/images/self_4.jpg" alt="Red 7 outdoors" width="600" height="400">
-  <img src="assets/images/self_5.jpg" alt="Red 7 indoors" width="600" height="400">
   <img src="assets/images/self_6.jpg" alt="Red 7 logo" width="600" height="400">
   <img src="assets/images/self_7.jpg" alt="Rehersal" width="600" height="400">
   <img src="assets/images/self_8.jpg" alt="Live at Cine el Rey" width="600" height="400">
-  <img src="assets/images/self_9.jpg" alt="Live at Thunderbird" width="600" height="400">
   <img src="assets/images/self_10.jpg" alt="Live in Paris" width="600" height="400">
 </div>
-        <div>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-            <h2>
-            My name is Robert Ruelas. I am a Technical Consultant and Software Developer that can help troubleshoot
-            <br> 
-            your hardware or elevate your next project. I'm also the co-founder and creative director of And Venus,
-            <br>
-            a musical project that provides insight into the psychology of music.
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-        </h2>
-        </div>
+<!--Content-->
+       <div>
+       <div class="#about" id="about">
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <h2>About Me</h2>
+        <br>
+        <br>
+        <h3>
+        My name is Robert Ruelas. I am a Technical Consultant and Software Developer that can help troubleshoot
+        <br> 
+        your hardware or elevate your next project. I'm also the co-founder and creative director of And Venus,
+        <br>
+        a musical project that provides insight into the psychology of music.<br>
+        <br>
+        My objective is to obtain a challenging and rewarding position in the technical industry, leveraging my exceptional
+        <br> 
+        hardware and software skills, strong problem solving, and leadership experience to provide outstanding results that will
+        <br> 
+        contribute to the success of your team.<br> 
+        <br>
+        As you will note, I am a college graduate from The University of Texas Pan American, and intend on
+        <br>
+        pursuing a Masters of Science in Human-Computer Interaction and Human Factors. I have more than 5
+        <br>
+        years of technical hardware and software experience and over 10 years of customer service.    
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        </h3>
+       </div>
+
+<div>
+    <div class="#skills" id="skills">
+<h4>Skills</h4>
+<br>
+<ul>  
+<li>Experienced in using Microsoft Office and various software applications</li>
+<li>Experienced in repairing Mac and iPhone hardware</li>  
+<li>Effective team management and leadership skills</li>
+<li>Excellent communication and organization skills</li>
+<li>Ability to work independently and as part of a team</li>
+<li>Strong attention to detail and accuracy</li>
+<li>Proficient in macOS and Microsoft</li> 
+<li>Proficient in iOS and Android OS</li>
+<li>Proficient in Python and SwiftUI</li>
+</ul>
+    </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div>
+<div class="#experience" id="experience">
+<h5>Experience</h5>
+<br>
+<h6>Apple<br> 
+<br>Houston, TX<br>
+<br>Position: Genius<br> 
+<br>April 2018 - Present</h6><br>
+<br><h7>Exceptional technical customer support for Apple products<br>
+<br><Hardware repairs and replacements to ensure optimal device performance<br>
+<br>Software-related assistance, including setup, configuration, updates, and conflict resolution<br>
+<br>Accurate and confidential record-keeping to track trends and improve processes<br> 
+<br>Collaborate and mentor team<br> 
+<br>Proficent in SwiftUI<br>
+<br>ACMT and ACiT</h7><br>
+<br>
+<br>Starbucks, Pearland, TX<br>
+<br>Manager, March 2007 - June 2018<br>
+Customer service, Customer connection, Analytical Problem Solving, 
+Cash management, Maintaining quality food and beverage control, Maintaining a clean work environment, Maintaining a positive work environment, Food and product inventory, Daily and weekly orders, 
+Creating weekly schedules, Organizing and maintaining product flow in accordance to planogram, 
+Mentor employees for growth and advancement within the company
+
+Education:
+University of Texas Pan American, Edinburg, TX
+B.A. - Psychology
+
+Weslaco High School, Weslaco, TX
+High school diploma
+
+</h6> 
+</div>
+
+<!--Classifications-->
         <div>
         <div class="#home" id="home">
             Home
         </div>
         <div class="#about" id="about">
-            About
+            About me
+        </div>
+        <div class="#skills" id="skills">
+            Skills
+        </div>
+        <div class="#experience" id="experience">
+            Experience
         </div>
         <div class="#portfolio" id="portfolio">
             Portfolio
