added logos to experience

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
        <br>
        <br>
        <br>
+<!--About me section-->       
        <h2>About Me</h2>
         <br>
         <br>
@@ -103,9 +104,18 @@
         <br>
         </h3>
        </div>
-
+<!--Skills section-->
 <div>
     <div class="#skills" id="skills">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>        
 <h4>Skills</h4>
 <br>
 <ul>  
@@ -120,85 +130,85 @@
 <li>Proficient in Python and SwiftUI</li>
 </ul>
     </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
+<!--Experience-->
 <div>
 <div class="#experience" id="experience">
+    <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <h5>Experience</h5>
 <br>
-<h6>Apple<br> 
-<br>Houston, TX<br>
+<h6><img src="assets/images/apple_logo.jpeg"><br>Job: Apple<br> 
+<br>Location: Houston, TX<br>
 <br>Position: Genius<br> 
-<br>April 2018 - Present</h6><br>
-<br><h7>Exceptional technical customer support for Apple products<br>
-<br><Hardware repairs and replacements to ensure optimal device performance<br>
+<br>Dates worked: April 2018 - Present</h6><br>
+<br><h7>Duties:<br>
+<br>Exceptional technical customer support for Apple products<br>
+<br>Hardware repairs and replacements to ensure optimal device performance<br>
 <br>Software-related assistance, including setup, configuration, updates, and conflict resolution<br>
 <br>Accurate and confidential record-keeping to track trends and improve processes<br> 
 <br>Collaborate and mentor team<br> 
 <br>Proficent in SwiftUI<br>
 <br>ACMT and ACiT</h7><br>
 <br>
-<br>Starbucks, Pearland, TX<br>
-<br>Manager, March 2007 - June 2018<br>
-Customer service, Customer connection, Analytical Problem Solving, 
-Cash management, Maintaining quality food and beverage control, Maintaining a clean work environment, Maintaining a positive work environment, Food and product inventory, Daily and weekly orders, 
-Creating weekly schedules, Organizing and maintaining product flow in accordance to planogram, 
-Mentor employees for growth and advancement within the company
-
-Education:
+<h8><img src="assets/images/starbucks_logo.jpeg"><br>Job: Starbucks<br>
+<br>Location: Houston, TX<br>
+<br>Position: Shift Supervisor<br>
+<br>Dates worked: March 2007 - June 2018</h8><br>
+<br><h9>Duties:<br>
+<br>Customer service, Customer connection, Analytical Problem Solving,<br> 
+<br>Cash management, Maintaining quality food and beverage control, <br>
+<br>Maintaining a clean work environment, Maintaining a positive work environment, 
+<br>Food and product inventory, Daily and weekly orders,<br> 
+<br>Creating weekly schedules, Organizing and maintaining product flow in accordance to planogram,<br> 
+<br>Mentor employees for growth and advancement within the company</h9><br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h10><img src="assets/images/the_shape_of_behavior_logo.jpeg"><br>Job: Shape of Behavior<br>
+<br>Location: Sugarland, TX<br>
+<br>Position: Behavior Analysis Interventionist<br>
+<br>Dates worked: April 2017- April 2018</h10><br>
+<br><h11>Duties:<br>
+<br>Applied Behavioral Analysis (ABA), Analytical Problem Solving<br> 
+<br>(HBI) Day Treatments, Preference Assessment, Parent Training, Sibling Sessions, Social Skills,
+<br>Shadowing & Inclusion, EEG Biofeedback, Speech Therapy, Autism Therapy, Data Analysis,<br>
+<br>Implementation of data collection using Catalyst program.
+<br>Health and Behavior Intervention</h11><br>
+<h12>Education:
+<br>
+<br>
+<img src="assets/images/utpa_logo.jpeg"><br>
 University of Texas Pan American, Edinburg, TX
-B.A. - Psychology
-
+<br>
+B.A. Psychology
+<br>
+<br>
+<img src="assets/images/whs_logo.jpeg"><br>
 Weslaco High School, Weslaco, TX
-High school diploma
-
-</h6> 
+<br>
+High school diploma</h12>
+<br>
+<br>
+<br>
+<br>
+<br>
 </div>
 
 <!--Classifications-->
-        <div>
-        <div class="#home" id="home">
-            Home
-        </div>
-        <div class="#about" id="about">
-            About me
-        </div>
-        <div class="#skills" id="skills">
-            Skills
-        </div>
-        <div class="#experience" id="experience">
-            Experience
-        </div>
-        <div class="#portfolio" id="portfolio">
-            Portfolio
-        </div>
-        <div class="contact" id="contact">
-            Contact
-        </div>
+
 
 
 
