added to education_modify nav styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <a class="#active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>   
         <a href="#about"><i class="fa fa-fw fa-book"></i> About</a>
         <a href="#skills"><i class="fa fa-fw fa-pencil-square-o"></i> Skills</a>
-        <a href="#experience"><i class="fa fa-fw fa-pencil-square-o"></i> Experience</a>
+        <a href="#experience"><i class="fa fa-fw fa-handshake-o"></i> Experience</a>
+        <a href="#education"><i class="fa fa-fw fa-graduation-cap"></i> Education</a>
         <a href="#portfolio"><i class="fa fa-fw fa-suitcase"></i> Portfolio</a>
         <a href="#contact"><i class="fa fa-fw fa-vcard"></i> Contact</a>
       </div>
@@ -173,24 +174,61 @@
 <br>Creating weekly schedules, Organizing and maintaining product flow in accordance to planogram,<br> 
 <br>Mentor employees for growth and advancement within the company</h9><br>
 <br>
-<br>
-<br>
-<br>
-<br>
 <h10><img src="assets/images/the_shape_of_behavior_logo.jpeg"><br>Job: Shape of Behavior<br>
 <br>Location: Sugarland, TX<br>
 <br>Position: Behavior Analysis Interventionist<br>
-<br>Dates worked: April 2017- April 2018</h10><br>
+<br>Dates worked: April 2017- April 2018</h10>
 <br><h11>Duties:<br>
 <br>Applied Behavioral Analysis (ABA), Analytical Problem Solving<br> 
 <br>(HBI) Day Treatments, Preference Assessment, Parent Training, Sibling Sessions, Social Skills,
 <br>Shadowing & Inclusion, EEG Biofeedback, Speech Therapy, Autism Therapy, Data Analysis,<br>
 <br>Implementation of data collection using Catalyst program.
-<br>Health and Behavior Intervention</h11><br>
-<h12>Education:
+<br>Health and Behavior Intervention
 <br>
 <br>
-<img src="assets/images/utpa_logo.jpeg"><br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</h11>
+</div>
+
+<!--Education section-->
+<div class="#education" id="education"></div>
+<h5>Education:</h5><br>
+<br>
+<h12><img src="assets/images/utpa_logo.jpeg"><br>
 University of Texas Pan American, Edinburg, TX
 <br>
 B.A. Psychology
@@ -201,13 +239,35 @@ Weslaco High School, Weslaco, TX
 <br>
 High school diploma</h12>
 <br>
-<br>
-<br>
-<br>
-<br>
 </div>
-
-<!--Classifications-->
+<!--Educational Experience-->
+<br><h14>Educational Experience:</h14>
+<br><h13>Role: Behavioral Therpaist at Rio Grande Valley Behavioral Consultants<br> 
+<br>Dates worked: Mar 2014 - May 2015</h13><br>   
+<br><h14>Implemented a Behavior Intervention Plan and worked with a client diagnosed with Autism Spectrum Disorder.<br> 
+<br>Utilized naturalistic observation, verbal operants, reinforcement, collected and input data. During my time with the program,<br>
+<br>my client successfully learned over 80 verbal operants and showed exponential improvement in social situations.<br>
+<br>
+<br><h13>Role: Research Assistant<br>
+<br>Dates worked: Jan 2014 - May 2014</h13><br>
+<br>Observed two fish species: The Opaline Gourami (Trichopodus Trichopetrus) and the Three-Spot Gourami (Trichopodus Trichopterus),<br> 
+<br>using the following sampling methods: Focal Animal Sampling, All Occurrence (Specified Behavior) Sampling [Bite/Butt/Lunge or Chase],<br> 
+<br>Scan Sampling (Behavior), and Scan Sampling (Location). Each sample was divided into three sets of samples at one-minute intervals per sample,<br> 
+<br>with the exception of Focal Sampling, which required a random sample sequence.<br> 
+<br>
+<br><h13>Role: Research Assistant<br>
+<br>Dates worked: May 2013 - Aug 2013</h13><br>
+<br>Participated in bilingual quasi-interviews and administered a series of questionnaires. The questionnaire was community based<br>
+<br>and measured data on the physical and mental abuse in intimate relationships. After survey administration, I assisted in quantitative<br> 
+<br>and qualitative data analysis and concluded with data entry using Microsoft Excel.</h14><br> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 
