changes to scroll container

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Linking CSS -->
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<!-- Linking javascript -->
-	<script src="myscripts.js"></script>
+	<script src="myscript.js"></script>
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!--Favicon-->
@@ -26,7 +26,7 @@
         <a href="#skills"><i class="fa fa-fw fa-pencil-square-o"></i> Skills</a>
         <a href="#experience"><i class="fa fa-fw fa-handshake-o"></i> Experience</a>
         <a href="#education"><i class="fa fa-fw fa-graduation-cap"></i> Education</a>
-        <a href="#portfolio"><i class="fa fa-fw fa-suitcase"></i> Portfolio</a>
+        <a href="#projects"><i class="fa fa-fw fa-suitcase"></i> Projects</a>
         <a href="#contact"><i class="fa fa-fw fa-vcard"></i> Contact</a>
       </div>
     </header>      
@@ -34,18 +34,22 @@
 <!--Home Section-->
 <body>
 <body style="background-color:black;">
+
 <!--Images section-->
-  <div class="scroll-container">
-  <img src="assets/images/self_2.jpg" alt="Studio" width="600" height="400">
-  <img src="assets/images/self_3.jpg" alt="Effiel Tower" width="600" height="400">
-  <img src="assets/images/self_4.jpg" alt="Red 7 outdoors" width="600" height="400">
-  <img src="assets/images/self_6.jpg" alt="Red 7 logo" width="600" height="400">
-  <img src="assets/images/self_7.jpg" alt="Rehersal" width="600" height="400">
-  <img src="assets/images/self_8.jpg" alt="Live at Cine el Rey" width="600" height="400">
-  <img src="assets/images/self_10.jpg" alt="Live in Paris" width="600" height="400">
-</div>
+
+<div class="scroll-container">
+    <div class="slider">
+    <img src="assets/images/self_2.jpg" alt="Studio" width="600" height="400"> 
+    <img src="assets/images/self_3.jpg" alt="Effiel Tower" width="600" height="400">
+    <img src="assets/images/self_4.jpg" alt="Red 7 outdoors" width="600" height="400">
+    <img src="assets/images/self_6.jpg" alt="Red 7 logo" width="600" height="400">
+    <img src="assets/images/self_7.jpg" alt="Rehersal" width="600" height="400">
+    <img src="assets/images/self_8.jpg" alt="Live at Cine el Rey" width="600" height="400">
+    <img src="assets/images/self_10.jpg" alt="Live in Paris" width="600" height="400">
+  </div>
+  </div>
+  
 <!--Content-->
-       <div>
        <div class="#about" id="about">
        <br>
        <br>
@@ -134,7 +138,7 @@
 <!--Experience-->
 <div>
 <div class="#experience" id="experience">
-    <br>
+<br>
 <br>
 <br>
 <br>
@@ -185,47 +189,24 @@
 <br>Implementation of data collection using Catalyst program.
 <br>Health and Behavior Intervention
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 </h11>
 </div>
 
 <!--Education section-->
 <div class="#education" id="education"></div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <h5>Education:</h5><br>
 <br>
 <h12><img src="assets/images/utpa_logo.jpeg"><br>
