changes to image gallery

--- a/index.html
+++ b/index.html
@@ -39,15 +39,70 @@
 
 <div class="scroll-container">
     <div class="slider">
-    <img src="assets/images/self_2.jpg" alt="Studio" width="600" height="400"> 
-    <img src="assets/images/self_3.jpg" alt="Effiel Tower" width="600" height="400">
-    <img src="assets/images/self_4.jpg" alt="Red 7 outdoors" width="600" height="400">
-    <img src="assets/images/self_6.jpg" alt="Red 7 logo" width="600" height="400">
-    <img src="assets/images/self_7.jpg" alt="Rehersal" width="600" height="400">
-    <img src="assets/images/self_8.jpg" alt="Live at Cine el Rey" width="600" height="400">
-    <img src="assets/images/self_10.jpg" alt="Live in Paris" width="600" height="400">
-  </div>
-  </div>
+        <div class="container">
+    <a href="assets/images/self_1.jpeg"><img src="assets/images/self_1.jpeg" alt="waterwall" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Waterwall<br>Houston, TX</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_2.jpg"><img src="assets/images/self_2.jpg" alt="Studio" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Studio 956</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_3.jpg"><img src="assets/images/self_3.jpg" alt="Effiel Tower" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Effiel Tower<br>Paris, FR</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_4.jpg"><img src="assets/images/self_4.jpg" alt="Red 7 outdoors" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Red 7<br>Outdoor Stage</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_5.jpg"><img src="assets/images/self_5.jpg" alt="Red 7 indoors" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Red 7<br>Indoor Stage</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_6.jpg"><img src="assets/images/self_6.jpg" alt="Red 7 logo" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Red 7 Logo</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_7.jpg"><img src="assets/images/self_7.jpg" alt="rehearsal" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Rehearsal</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_8.jpg"><img src="assets/images/self_8.jpg" alt="cine" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Cine el Rey<br>McAllen, TX</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_9.jpg"><img src="assets/images/self_9.jpg" alt="thunderbird" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Thunderbird<br>Austin, TX</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_10.jpg"><img src="assets/images/self_10.jpg" alt="live in paris" class="image" style="height: 400px; width: 600px;"></a> 
+    <div class="middle">
+        <div class="text">Live in Paris</div>
+        </div>
+</div>
+    </div>
+</div>
+
+
   
 <!--Content-->
        <div class="#about" id="about">
