added links to footer

--- a/index.html
+++ b/index.html
@@ -327,8 +327,16 @@ High school diploma</h12>
 	<a href="https://www.instagram.com/andvenus/">
 	<img src="https://app-assets.topfan.com/uploads/ckeditor/pictures/8152/content_5d8e5400-d250-013b-c5ad-0a58a9feac02.png" style="width: 25px; height: 25px;">
 	</a>
-	&nbsp;&nbsp;
-		</div>
+    <br>
+	<a href="https://www.linkedin.com/in/rruelas87/"><i class="fa fa-linkedin-square" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    </a>
+    <a href="https://github.com/oneironaught"><i class="fa fa-github" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>	
+    </a>
+	<a href="https://music.apple.com/us/artist/and-venus/1335594997"><i class="fa fa-apple" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    </a>
+    <a href="https://open.spotify.com/artist/4CPEqoLO6sSiU3TS6Gygc0?si=2FRH7YnhRWy9Jrrlctkzew"><i class="fa fa-spotify" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    </a>
+    </div>
 	<div style="text-align: center;">
 	<a href="terms.html"><span style="color:#999999;"> |&nbsp; </span>Terms of Use |&nbsp;</span>
 	</a>
