added links to header and moved photos

--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
     <!-- "Main" title -->
     <br>
     <h1 id="logo">Robert Ruelas</h1>
+    <div style="text-align: left;"> 
+    <a href="https://www.linkedin.com/in/rruelas87/"><i class="fa fa-linkedin-square" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    </a>
+    <a href="https://www.facebook.com/bobby.ruelas/"><i class="fa fa-facebook-square" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    </a>
+    <a href="https://www.instagram.com/andvenus/"><i class="fa fa-instagram" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    </a>      
+    <a href="https://github.com/oneironaught"><i class="fa fa-github" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>	
+    </a>
+	<a href="https://music.apple.com/us/artist/and-venus/1335594997"><i class="fa fa-apple" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    </a>
+    <a href="https://open.spotify.com/artist/4CPEqoLO6sSiU3TS6Gygc0?si=2FRH7YnhRWy9Jrrlctkzew"><i class="fa fa-spotify" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    </a>
+    <a href="https://www.youtube.com/@bobbyruelas"><i class="fa fa-youtube-play" aria-hidden="true" style="width: 25px; height: 25px; color: #999999;"></i>
+    </a>
+    </div>
     <!-- Navigation bar -->
     <div class="topnav">
         <a class="#active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>   
@@ -27,6 +43,7 @@
         <a href="#experience"><i class="fa fa-fw fa-handshake-o"></i> Experience</a>
         <a href="#education"><i class="fa fa-fw fa-graduation-cap"></i> Education</a>
         <a href="#projects"><i class="fa fa-fw fa-suitcase"></i> Projects</a>
+        <a href="#photos"><i class="fa fa-fw fa-picture-o"></i> Photos</a>
         <a href="#contact"><i class="fa fa-fw fa-vcard"></i> Contact</a>
       </div>
     </header>      
@@ -35,75 +52,6 @@
 <body>
 <body style="background-color:black;">
 
-<!--Images section-->
-
-<div class="scroll-container">
-    <div class="slider">
-        <div class="container">
-    <a href="assets/images/self_1.jpeg"><img src="assets/images/self_1.jpeg" alt="waterwall" class="image" style="height: 400px; width: 600px;"></a>
-    <div class="middle">
-        <div class="text">Waterwall<br>Houston, TX</div>
-      </div>
-    </div>
-    <div class="container">
-    <a href="assets/images/self_2.jpg"><img src="assets/images/self_2.jpg" alt="Studio" class="image" style="height: 400px; width: 600px;"></a>
-    <div class="middle">
-        <div class="text">Studio 956</div>
-      </div>
-    </div>
-    <div class="container">
-    <a href="assets/images/self_3.jpg"><img src="assets/images/self_3.jpg" alt="Effiel Tower" class="image" style="height: 400px; width: 600px;"></a>
-    <div class="middle">
-        <div class="text">Effiel Tower<br>Paris, FR</div>
-      </div>
-    </div>
-    <div class="container">
-    <a href="assets/images/self_4.jpg"><img src="assets/images/self_4.jpg" alt="Red 7 outdoors" class="image" style="height: 400px; width: 600px;"></a>
-    <div class="middle">
-        <div class="text">Red 7<br>Outdoor Stage</div>
-      </div>
-    </div>
-    <div class="container">
-    <a href="assets/images/self_5.jpg"><img src="assets/images/self_5.jpg" alt="Red 7 indoors" class="image" style="height: 400px; width: 600px;"></a>
-    <div class="middle">
-        <div class="text">Red 7<br>Indoor Stage</div>
-      </div>
-    </div>
-    <div class="container">
-    <a href="assets/images/self_6.jpg"><img src="assets/images/self_6.jpg" alt="Red 7 logo" class="image" style="height: 400px; width: 600px;"></a>
-    <div class="middle">
-        <div class="text">Red 7 Logo</div>
-      </div>
-    </div>
-    <div class="container">
-    <a href="assets/images/self_7.jpg"><img src="assets/images/self_7.jpg" alt="rehearsal" class="image" style="height: 400px; width: 600px;"></a>
-    <div class="middle">
-        <div class="text">Rehearsal</div>
-      </div>
-    </div>
-    <div class="container">
-    <a href="assets/images/self_8.jpg"><img src="assets/images/self_8.jpg" alt="cine" class="image" style="height: 400px; width: 600px;"></a>
-    <div class="middle">
-        <div class="text">Cine el Rey<br>McAllen, TX</div>
-      </div>
-    </div>
-    <div class="container">
-    <a href="assets/images/self_9.jpg"><img src="assets/images/self_9.jpg" alt="thunderbird" class="image" style="height: 400px; width: 600px;"></a>
-    <div class="middle">
-        <div class="text">Thunderbird<br>Austin, TX</div>
-      </div>
-    </div>
-    <div class="container">
-    <a href="assets/images/self_10.jpg"><img src="assets/images/self_10.jpg" alt="live in paris" class="image" style="height: 400px; width: 600px;"></a> 
-    <div class="middle">
-        <div class="text">Live in Paris</div>
-        </div>
-</div>
-    </div>
-</div>
-
-
-  
 <!--Content-->
        <div class="#about" id="about">
        <br>
@@ -114,9 +62,7 @@
        <br>
        <br>
        <br>
-       <br>
-       <br>
-       <br>
+    
 <!--About me section-->       
        <h2>About Me</h2>
         <br>
@@ -259,9 +205,6 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
 <h5>Education:</h5><br>
 <br>
 <h12><img src="assets/images/utpa_logo.jpeg"><br>
@@ -304,7 +247,128 @@ High school diploma</h12>
 <br>
 <br>
 <br>
+<!-- Portfolio Gallery Grid -->
+<div class="#projects" id="projects">
+<br>
+<br>
+<br>
+<br>
+    <h2>Projects</h2>
+<div class="row">
+    <div class="column">
+      <div class="content">
+        <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
+        <h3>My Work</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
+        <h3>My Work</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
+        <h3>My Work</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
+        <h3>My Work</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+  <!-- END GRID -->
+  </div>
 
+<!--Images section-->
+<div class="#photos" id="photos">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+    <h2>Photos</h2>
+<div class="scroll-container">
+    <div class="slider">
+        <div class="container">
+    <a href="assets/images/self_1.jpeg"><img src="assets/images/self_1.jpeg" alt="waterwall" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Waterwall<br>Houston, TX</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_2.jpg"><img src="assets/images/self_2.jpg" alt="Studio" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Studio 956</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_3.jpg"><img src="assets/images/self_3.jpg" alt="Effiel Tower" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Effiel Tower<br>Paris, FR</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_4.jpg"><img src="assets/images/self_4.jpg" alt="Red 7 outdoors" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Red 7<br>Outdoor Stage</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_5.jpg"><img src="assets/images/self_5.jpg" alt="Red 7 indoors" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Red 7<br>Indoor Stage</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_6.jpg"><img src="assets/images/self_6.jpg" alt="Red 7 logo" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Red 7 Logo</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_7.jpg"><img src="assets/images/self_7.jpg" alt="rehearsal" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Rehearsal</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_8.jpg"><img src="assets/images/self_8.jpg" alt="cine" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Cine el Rey<br>McAllen, TX</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_9.jpg"><img src="assets/images/self_9.jpg" alt="thunderbird" class="image" style="height: 400px; width: 600px;"></a>
+    <div class="middle">
+        <div class="text">Thunderbird<br>Austin, TX</div>
+      </div>
+    </div>
+    <div class="container">
+    <a href="assets/images/self_10.jpg"><img src="assets/images/self_10.jpg" alt="live in paris" class="image" style="height: 400px; width: 600px;"></a> 
+    <div class="middle">
+        <div class="text">Live in Paris</div>
+        </div>
+</div>
+    </div>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 
