--- a/index.html
+++ b/index.html
@@ -395,21 +395,93 @@ High school diploma</h12>
                 </div>
             </div>
             <div class="container">
-              <a href="assets/images/self_2.jpg">
-                  <img src="assets/images/self_2.jpg" alt="Studio" class="photos">
+              <a href="assets/images/self_3.jpg">
+                  <img src="assets/images/self_3.jpg" alt="Effiel Tower" class="photos">
               </a>
               <div class="center">
-                  <div class="text">Studio 956</div>
+                  <div class="text">Effiel Tower</div>
               </div>
           </div>
           <div class="container">
-            <a href="assets/images/self_2.jpg">
-                <img src="assets/images/self_2.jpg" alt="Studio" class="photos">
+            <a href="assets/images/self_4.jpg">
+                <img src="assets/images/self_4.jpg" alt="Red 7 Outdoor" class="photos">
             </a>
             <div class="center">
-                <div class="text">Studio 956</div>
+                <div class="text">Red 7<br>Outdoor Stage</div>
             </div>
         </div>
+        <div class="container">
+          <a href="assets/images/self_5.jpg">
+              <img src="assets/images/self_5.jpg" alt="Red 7 Indoor" class="photos">
+          </a>
+          <div class="center">
+              <div class="text">Red 7 <br>Indoor Stage</div>
+          </div>
+      </div>
+      <div class="container">
+        <a href="assets/images/self_6.jpg">
+            <img src="assets/images/self_6.jpg" alt="Red 7 Logo" class="photos">
+        </a>
+        <div class="center">
+            <div class="text">Red 7 Logo</div>
+        </div>
+    </div>
+    <div class="container">
+      <a href="assets/images/self_7.jpg">
+          <img src="assets/images/self_7.jpg" alt="Rehearsal" class="photos">
+      </a>
+      <div class="center">
+          <div class="text">Rehearsal</div>
+      </div>
+  </div>
+  <div class="container">
+    <a href="assets/images/self_8.jpg">
+        <img src="assets/images/self_8.jpg" alt="Cine" class="photos">
+    </a>
+    <div class="center">
+        <div class="text">Live at Cine el Rey<br>McAllen, TX</div>
+    </div>
+</div>
+<div class="container">
+  <a href="assets/images/self_9.jpg">
+      <img src="assets/images/self_9.jpg" alt="Thunderbird" class="photos">
+  </a>
+  <div class="center">
+      <div class="text">Live at Thunderbird Coffee<br>Austin, TX</div>
+  </div>
+</div>
+<div class="container">
+  <a href="assets/images/self_10.jpg">
+      <img src="assets/images/self_10.jpg" alt="Paris" class="photos">
+  </a>
+  <div class="center">
+      <div class="text">Live in Paris</div>
+  </div>
+</div>
+<div class="container">
+  <a href="assets/images/self_11.jpeg">
+      <img src="assets/images/self_11.jpeg" alt="Childhood" class="photos">
+  </a>
+  <div class="center">
+      <div class="text">1990</div>
+  </div>
+</div>
+<div class="container">
+  <a href="assets/images/gatos_team_photo.jpeg">
+      <img src="assets/images/gatos_team_photo.jpeg" alt="Team Photo" class="photos">
+  </a>
+  <div class="center">
+      <div class="text">Los Gatos Team Photo</div>
+  </div>
+</div>
+<div class="container">
+  <a href="assets/images/gatos_practice.jpeg">
+      <img src="assets/images/gatos_practice.jpeg" alt="Gatos Practice" class="photos">
+  </a>
+  <div class="center">
+      <div class="text">Los Gatos Practice</div>
+  </div>
+</div>
         </div>
         </div>
             
