--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ High school diploma</h12>
           <div class="middle">
               <div class="text">
                   <h3>And Venus</h3>
-                  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                  <p>This is my bands official website. It was created using HTML, CSS, and Javascript</p>
               </div>
           </div>
           </a>
@@ -299,11 +299,11 @@ High school diploma</h12>
   </div>
   <div class="column">
     <div class="container">
-        <a href="https://andvenus.com"><img src="assets/images/and_venus.jpeg" alt="and_venus" class="image">
+        <a href="https://oneironaught.github.io/password-generator/"><img src="assets/images/password_generator.jpeg" alt="password_generator" class="image">
         <div class="middle">
             <div class="text">
-                <h3></h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                <h3>Password Generator</h3>
+                <p>This is a mini Password Generator that I created using HTML, CSS, and Javascript</p>
             </div>
         </div>
         </a>
@@ -311,11 +311,11 @@ High school diploma</h12>
 </div>
   <div class="column">
       <div class="container">
-          <a href="https://andvenus.com"><img src="assets/images/and_venus.jpeg" alt="and_venus" class="image">
+          <a href="https://oneironaught.github.io/run-buddy/"><img src="assets/images/run_buddy.jpeg" alt="run_buddy" class="image">
           <div class="middle">
               <div class="text">
-                  <h3></h3>
-                  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                  <h3>Run Buddy Inc.,</h3>
+                  <p>This is a sample gym website that I created using HTML, CSS, and Javascript</p>
               </div>
           </div>
           </a>
@@ -324,11 +324,11 @@ High school diploma</h12>
   <div class="row">
     <div class="column">
         <div class="container">
-            <a href="https://andvenus.com"><img src="assets/images/and_venus.jpeg" alt="and_venus" class="image">
+            <a href="https://horiseon.on.fleek.co"><img src="assets/images/horiseon.png" alt="Horiseon" class="image">
             <div class="middle">
                 <div class="text">
-                    <h3>And Venus</h3>
-                    <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    <h3>Horiseon</h3>
+                    <p>This is a sample website that I created using HTML, CSS, and Javascript</p>
                 </div>
             </div>
             </a>
@@ -336,11 +336,11 @@ High school diploma</h12>
     </div>
   <div class="column">
         <div class="container">
-            <a href="https://andvenus.com"><img src="assets/images/and_venus.jpeg" alt="and_venus" class="image">
+            <a href="https://oneironaught.github.io/Hasbulla-Fan-Page/"><img src="assets/images/hasbulla.jpeg" alt="hasbulla" class="image">
             <div class="middle">
                 <div class="text">
-                    <h3></h3>
-                    <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    <h3>Hasbulla</h3>
+                    <p>My first basic website that I uploaded to GitHub. I used HTML and CSS</p>
                 </div>
             </div>
             </a>
@@ -348,11 +348,11 @@ High school diploma</h12>
     </div>
     <div class="column">
       <div class="container">
-          <a href="https://andvenus.com"><img src="assets/images/and_venus.jpeg" alt="and_venus" class="image">
+          <a href="https://sant-andreu-jazz.on.fleek.co"><img src="assets/images/alba.jpg" alt="alba" class="image">
           <div class="middle">
               <div class="text">
-                  <h3></h3>
-                  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                  <h3>All that Jazz</h3>
+                  <p>This is a skeleton for a fan website utilizing hyperlinks and a Buy Now button. I used HTML and CSS</p>
               </div>
           </div>
           </a>
