--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
 <br>
 <h5>Experience</h5>
 <br>
+<div class="logo-container">
 <h6><img src="assets/images/apple_logo.jpeg"><br>Job: Apple<br> 
 <br>Location: Houston, TX<br>
 <br>Position: Genius<br> 
-<br>Dates worked: April 2018 - Present</h6><br>
+<br>April 2018 - Present</h6></div><br>
 <br><h7>Duties:<br>
 <br>Exceptional technical customer support for Apple products<br>
 <br>Hardware repairs and replacements to ensure optimal device performance<br>
@@ -190,10 +191,11 @@
 <br>Proficent in SwiftUI<br>
 <br>ACMT and ACiT</h7><br>
 <br>
+<div class="logo-container">
 <h8><img src="assets/images/starbucks_logo.jpeg"><br>Job: Starbucks<br>
 <br>Location: Houston, TX<br>
 <br>Position: Shift Supervisor<br>
-<br>Dates worked: March 2007 - June 2018</h8><br>
+<br>March 2007 - June 2018</h8></div><br>
 <br><h9>Duties:<br>
 <br>Customer service, Customer connection, Analytical Problem Solving,<br> 
 <br>Cash management, Maintaining quality food and beverage control, <br>
@@ -202,10 +204,11 @@
 <br>Creating weekly schedules, Organizing and maintaining product flow in accordance to planogram,<br> 
 <br>Mentor employees for growth and advancement within the company</h9><br>
 <br>
+<div class="logo-container">
 <h10><img src="assets/images/the_shape_of_behavior_logo.jpeg"><br>Job: Shape of Behavior<br>
 <br>Location: Sugarland, TX<br>
 <br>Position: Behavior Analysis Interventionist<br>
-<br>Dates worked: April 2017- April 2018</h10>
+<br>April 2017- April 2018</h10></div>
 <br><h11>Duties:<br>
 <br>Applied Behavioral Analysis (ABA), Analytical Problem Solving<br> 
 <br>(HBI) Day Treatments, Preference Assessment, Parent Training, Sibling Sessions, Social Skills,
@@ -230,6 +233,7 @@
 <br>
 <h5>Education:</h5><br>
 <br>
+<div class="logo-container">
 <h12><img src="assets/images/utpa_logo.jpeg"><br>
 University of Texas Pan American, Edinburg, TX
 <br>
@@ -239,11 +243,15 @@ B.A. Psychology
 <img src="assets/images/whs_logo.jpeg"><br>
 Weslaco High School, Weslaco, TX
 <br>
-High school diploma</h12>
+High school diploma</h12></div>
+</div>
 <br>
 </div>
+<br>
+<br>
+<br>
 <!--Educational Experience-->
-<br><h14>Educational Experience:</h14>
+<br><h5>Educational Experience:</h5>
 <br><h13>Role: Behavioral Therpaist at Rio Grande Valley Behavioral Consultants<br> 
 <br>Dates worked: Mar 2014 - May 2015</h13><br>   
 <br><h14>Implemented a Behavior Intervention Plan and worked with a client diagnosed with Autism Spectrum Disorder.<br> 
@@ -492,11 +500,47 @@ High school diploma</h12>
 <br>
 <br>
 <br>
+<!--Contact Section-->
+<div class="#contact" id="contact">
 <br>
 <br>
-
-
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h2>Contact</h2>
+<br>
+<br>
+<h3>Thank you for visiting! I'd love to hear from you! 
+<br>If you have any questions, feedback, or would like to get in touch with me, 
+<br>please use the form below or reach out through any of the provided contact details.</h3>
+<!--Contact Form-->
+<div class="contact-form">
+<br>
+<form action="contact_form.php" method="POST">
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" name="name" required><br><br>
+  <label for="email">Email:</label><br>
+  <input type="email" id="email" name="email" required><br><br>
+  
+  <label for="subject">Subject:</label><br>
+  <input type="text" id="subject" name="subject" required><br><br>
+  
+  <label for="message">Message:</label><br>
+  
+    <textarea id="message" name="message" rows="5" required></textarea><br><br>
+    <div class="g-recaptcha" data-sitekey="6LcTPvEpAAAAAFpUM_cZh5EWZzAFzYAoA_jW2cMZ"></div><br> <!-- Add your site key here -->
+    <input type="submit" value="Send Message">
+  </form></div>
+</div>
+<br>
+<br>
+<br>
+<br>
 </body>
 
 <!-- Footer Class-->
