--- a/index.html
+++ b/index.html
@@ -539,6 +539,12 @@ High school diploma</h12></div>
     <input type="submit" value="Send Message">
   </form></div>
 </div>
+<!--Linking PHP-->
+<?php
+include 'contact_form.php';
+?>
+
+<!--Footer-->
 <br>
 <br>
 <br>
