--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!--Favicon-->
 	<!--<link rel="shortcut icon" href="https://f4.bcbits.com/img/a1418076414_3.jpg"> -->
     <!--PHP Captcha Script-->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LcTPvEpAAAAAFpUM_cZh5EWZzAFzYAoA_jW2cMZ"></script>
 </head>
 <!--Header and Nav-->
 <header>
