--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<!--<link rel="shortcut icon" href="https://f4.bcbits.com/img/a1418076414_3.jpg"> -->
     <!--PHP Captcha Script-->
     <script src="https://www.google.com/recaptcha/enterprise.js?render=6LcTPvEpAAAAAFpUM_cZh5EWZzAFzYAoA_jW2cMZ"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <!--Header and Nav-->
 <header>
@@ -537,7 +538,20 @@ High school diploma</h12></div>
     <textarea id="message" name="message" rows="5" required></textarea><br><br>
     <div class="g-recaptcha" data-sitekey="6LcTPvEpAAAAAFpUM_cZh5EWZzAFzYAoA_jW2cMZ"></div><br> <!-- Add your site key here -->
     <input type="submit" value="Send Message">
-  </form></div>
+</form></div>
+
+<!-- Replace the variables below. -->
+<script>
+    function onSubmit(token) {
+      document.getElementById("demo-form").submit();
+    }
+  </script>
+<button class="g-recaptcha"
+data-sitekey="6LcTPvEpAAAAAFpUM_cZh5EWZzAFzYAoA_jW2cMZ"
+data-callback='onSubmit'
+data-action='submit'>
+Submit
+</button>
 </div>
 
 <!--Footer-->
