changes to logo image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="existing-container">  
   <div class="centered-content">
       <div class="image-container">
-          <img src="assets/Black White Minimalist SImple Monogram Typography Logo.png" alt="Centered Image">
+          <img src="assets/images/Black White Minimalist SImple Monogram Typography Logo-2.png" alt="Centered Image">
       </div>
   </div>
 </div>
